--- a/theme/static/css/tailwind.css
+++ b/theme/static/css/tailwind.css
@@ -2,6 +2,7 @@
 
 @source "../../../templates/**/*.html";
 @source "../../../**/templates/**/*.html";
+@source "../../../static/js/**/*.js";
 
 @theme {
   /* Cores Base da Paleta */
